--- a/1M/1M-exercicesS1-P1-corr.tex
+++ b/1M/1M-exercicesS1-P1-corr.tex
@@ -81,68 +81,68 @@
 \insertexo{zm8w4}{false}{cor}
 \insertexo{s2efz}{false}{cor}
 \insertexo{d5xp3}{false}{cor}
-%\subsubsection{Intervalles réelles}
-%\insertexo{6ugwm}{false}{cor}
-%\insertexo{v2rv8}{false}{cor}
-%\insertexo{p2cxv}{false}{cor}
-%\insertexo{p6w7q}{false}{cor}
-%\insertexo{czc9e}{false}{cor}
-%\insertexo{nw439}{false}{cor}
-%\insertexo{61ve6}{false}{cor}
-%\insertexo{fq51r}{false}{cor}
-%\insertexo{ht3h6}{false}{cor}
-%\insertexo{u14s6}{false}{cor}
-%\insertexo{9k125}{false}{cor}
-%\insertexo{mrvd7}{false}{cor}
-%\insertexo{drcdb}{false}{cor}
-%\subsection{Calul littéral}
-%\subsubsection{Traduire un énoncé}
-%\insertexo{3qa3k}{false}{cor}
-%\insertexo{a3tr3}{false}{cor}
-%\subsubsection{Isoler une variable}
-%\insertexo{kdgn}{false}{cor}
-%\insertexo{n66ke}{false}{cor}
-%\insertexo{2yzxt}{false}{cor}
-%
-%\subsubsection{L'algèbre comme outil de preuve}
-%\insertexo{sxya4}{false}{cor}
-%\insertexo{wanr}{false}{cor}
-%\insertexo{jxa81}{false}{cor}
-%\insertexo{u38hd}{false}{cor}
-%\insertexo{5xg9e}{false}{cor}
-%\insertexo{rdpye}{false}{cor}
-%\subsubsection{Développer et réduire}
-%\insertexo{9e72h}{false}{cor}
-%\insertexo{jw3r4}{false}{cor}
-%\insertexo{1e54x}{false}{cor}
-%\insertexo{v4dqz}{false}{cor}
-%\insertexo{n86nn}{false}{cor}
-%\insertexo{akwq5}{false}{cor}
-%\insertexo{sj5q7}{false}{cor}
-%\insertexo{gw913}{false}{cor}
-%\insertexo{n9d51}{false}{cor}
-%\insertexo{nrg23}{false}{cor}
-%\insertexo{1kye7}{false}{cor}
-%
-%\subsubsection{Identités remarquables}
-%\insertexo{xabyp}{false}{cor}
-%\insertexo{tm6je}{false}{cor}
-%\insertexo{3ytn7}{false}{cor}
-%\insertexo{guy1v}{false}{cor}
-%
-%\insertexo{3at1e}{false}{cor}
-%\insertexo{akeku}{false}{cor}
-%
-%
-%\insertexo{sqsur}{false}{cor}
-%%\insertexo{qkz3z}{false}{cor}
-%\insertexo{6edd2}{false}{cor}
-%\insertexo{37srd}{false}{cor}
-%\subsubsection{Factorisation}
-%\insertexo{g6h1q}{false}{cor}
-%\insertexo{pq3wr}{false}{cor}
-%\insertexo{q5m9j}{false}{cor}
-%\insertexo{6cmvd}{false}{cor}
+\subsubsection{Intervalles réelles}
+\insertexo{6ugwm}{false}{cor}
+\insertexo{v2rv8}{false}{cor}
+\insertexo{p2cxv}{false}{cor}
+\insertexo{p6w7q}{false}{cor}
+\insertexo{czc9e}{false}{cor}
+\insertexo{nw439}{false}{cor}
+\insertexo{61ve6}{false}{cor}
+\insertexo{fq51r}{false}{cor}
+\insertexo{ht3h6}{false}{cor}
+\insertexo{u14s6}{false}{cor}
+\insertexo{9k125}{false}{cor}
+\insertexo{mrvd7}{false}{cor}
+\insertexo{drcdb}{false}{cor}
+\subsection{Calul littéral}
+\subsubsection{Traduire un énoncé}
+\insertexo{3qa3k}{false}{cor}
+\insertexo{a3tr3}{false}{cor}
+\subsubsection{Isoler une variable}
+\insertexo{kdgn}{false}{cor}
+\insertexo{n66ke}{false}{cor}
+\insertexo{2yzxt}{false}{cor}
+
+\subsubsection{L'algèbre comme outil de preuve}
+\insertexo{sxya4}{false}{cor}
+\insertexo{wanr}{false}{cor}
+\insertexo{jxa81}{false}{cor}
+\insertexo{u38hd}{false}{cor}
+\insertexo{5xg9e}{false}{cor}
+\insertexo{rdpye}{false}{cor}
+\subsubsection{Développer et réduire}
+\insertexo{9e72h}{false}{cor}
+\insertexo{jw3r4}{false}{cor}
+\insertexo{1e54x}{false}{cor}
+\insertexo{v4dqz}{false}{cor}
+\insertexo{n86nn}{false}{cor}
+\insertexo{akwq5}{false}{cor}
+\insertexo{sj5q7}{false}{cor}
+\insertexo{gw913}{false}{cor}
+\insertexo{n9d51}{false}{cor}
+\insertexo{nrg23}{false}{cor}
+\insertexo{1kye7}{false}{cor}
+
+\subsubsection{Identités remarquables}
+\insertexo{xabyp}{false}{cor}
+\insertexo{tm6je}{false}{cor}
+\insertexo{3ytn7}{false}{cor}
+\insertexo{guy1v}{false}{cor}
+
+\insertexo{3at1e}{false}{cor}
+\insertexo{akeku}{false}{cor}
+
+
+\insertexo{sqsur}{false}{cor}
+%\insertexo{qkz3z}{false}{cor}
+\insertexo{6edd2}{false}{cor}
+\insertexo{37srd}{false}{cor}
+\subsubsection{Factorisation}
+\insertexo{g6h1q}{false}{cor}
+\insertexo{pq3wr}{false}{cor}
+\insertexo{q5m9j}{false}{cor}
+\insertexo{6cmvd}{false}{cor}
 %\insertexo{s6f6t}{false}{cor}
 %\insertexo{4kec2}{false}{cor}
 %\insertexo{z34z9}{false}{cor}
