--- a/3M/3M-limites-corr.tex
+++ b/3M/3M-limites-corr.tex
@@ -2,6 +2,7 @@
 \usepackage{../packages/coursCollege}
 \newcommand{\Chapitre}{Limites et continuité}
 \renewcommand{\path}{../}
+\externaldocument{output/3M-limites/3M-limites}
 
 \usepackage[    %backend=biber, 
     natbib=true,
