--- a/packages/coursCollege.sty
+++ b/packages/coursCollege.sty
@@ -3,6 +3,7 @@
 \RequirePackage{titlesec}  % For section numbering
 \RequirePackage{ragged2e}  % For text alignment
 \RequirePackage{hyperref}  % For clickable references
+\RequirePackage{xr-hyper} % or xr if no hyperref
 \RequirePackage{etoolbox}
 \usepackage[french]{babel}
 \RequirePackage[french=quotes]{csquotes}
