--- a/src_exos/6cmvd.tex
+++ b/src_exos/6cmvd.tex
@@ -21,10 +21,10 @@ On considère le nombre $123456789^2-123456786 \cdot 123456792$.
 \correction{
 \tcblower
 \begin{tasks}(2)
-	\task Calculer.
+	\task Calculer. Elle devrait donner $0$.
 	\task $x^2-(x-3)(x+3)$
 	\task $9$
-	\task Factoriser permet de calculer rapidement. 
+	\task La calculatrice se trompe à cause d'une erreur d'arrondi. Dans ce cas, la factorisation permet de calculer rapidement et correctement. 
 \end{tasks}
 }
 
