--- a/src_exos/hb4kv.tex
+++ b/src_exos/hb4kv.tex
@@ -13,6 +13,7 @@
 Déterminer le nombre dérivé de la fonction réelle \(f(t)=t^2 - 7t + 3\) en \(t=-1\).
 }
 \correction{
-
+	\tcblower
+$f'(-1)=-9$.
 }
 
