--- a/src_exos/kfy9s.tex
+++ b/src_exos/kfy9s.tex
@@ -21,7 +21,7 @@ Déterminer l'angle entre les graphes de $f$ et $g$ en chacun de leurs points d'
 }
 \correction{
 \tcblower
-\begin{tasks}
+\begin{tasks}(2)
  \task $75,96^{\circ}$ pour $x=0$ et $6,91^{\circ}$ pour $x=2$
 \task $75,96^{\circ}$ pour $x=-1$ et $2,36^{\circ}$ pour $x=3$
 \task $45^{\circ}$ pour $x=0$ et $11,31^{\circ}$ pour $x=1$
