--- a/src_exos/mkn1h.tex
+++ b/src_exos/mkn1h.tex
@@ -10,10 +10,10 @@
 
 \contenu{
 \tcblower
-Déterminer l'expression algébrique d'une fonction rationnelle $f$ qui admette les droites $x=5, x=0$ et $y=3x-5$ comme asymptotes. Et s'il fallait en plus que $f$ passe par les points $(2;-1)$ et $(6;5)$~?
+Déterminer l'expression algébrique d'une fonction rationnelle $f$ qui admette les droites $x=5, x=0$ et $y=3x-5$ comme asymptotes.% Et s'il fallait en plus que $f$ passe par les points $(2;-1)$ et $(6;5)$~?
 }
 \correction{
 \tcblower
-On a $f(x)=\dfrac{3x^3-14x^2+cx+d}{(x-5)x}$ pour $c, d\in\mathbb{R}$. Si on demande en plus la condition sur les points, alors $c=-21$ et $d=72$. 
+On a $f(x)=\dfrac{3x^3-20x^2+cx+d}{(x-5)x}$ pour $c, d\in\mathbb{R}$.% Si on demande en plus la condition sur les points, alors $c=-21$ et $d=72$. 
 }
 
