--- a/src_exos/mmztw.tex
+++ b/src_exos/mmztw.tex
@@ -10,7 +10,7 @@
 
 \contenu{
 \tcblower
-Trouver la pente de la tangente à la parabole d’équation \(y=x^2\) au point \((-1;1)\).
+Déterminer la pente de la tangente à la parabole d’équation \(y=x^2\) au point \((-1;1)\).
 }
 \correction{
 	\tcblower
