--- a/src_exos/pajju.tex
+++ b/src_exos/pajju.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+	{\bfseries Entraînement individuel}
 \tcblower
 En utilisant la définition de la dérivée en un point, calculer les nombres suivants :
 \begin{tasks}(2)
@@ -22,7 +23,7 @@ En utilisant la définition de la dérivée en un point, calculer les nombres su
 }
 \correction{
 \tcblower
-\begin{tasks}(5)
+\begin{tasks}(6)
 	\task $-12$
 	\task $\dfrac{3}{4}$
 	\task $11$
