--- a/src_exos/raguk.tex
+++ b/src_exos/raguk.tex
@@ -32,6 +32,7 @@ $\begin{aligned}(f - g)'(x) &=
 Justifier chaque étape de la démonstration.
 }
 \correction{
-
+	\tcblower
+Faire vérifier par l'enseignant.
 }
 
