--- a/src_exos/sjs2h.tex
+++ b/src_exos/sjs2h.tex
@@ -13,6 +13,7 @@
 Que penser de la dérivée de la fonction réelle \(f(x)=\lvert x^2-1\rvert\) en \(x=0\), \(x=1\) et \(x=2\) ?
 }
 \correction{
-
+	\tcblower
+Elle existe et vaut $2x$ en $x=1$ et $x=2$. Toutefois, elle n'existe pas en $x=1$, car les limites à gauche et à droite sont distinctes. Ainsi, $f'(0)=0$ et $f'(2)=4$, mais la fonction n'est pas dérivable en $x=1$. 
 }
 
