--- a/src_exos/uhfwb.tex
+++ b/src_exos/uhfwb.tex
@@ -32,20 +32,30 @@ Un mobile se déplace sur un axe selon la loi \(p(t)=4t-\dfrac{t^2}{2}\), où \(
 \end{tasks}
 }
 \correction{
-\begin{tasks}
-\task
-\begin{itemize}
-	\item
-	\item
-	\item
-	\item
-	\item
-\end{itemize}
-	\task
-	\begin{itemize}
-		\item
-		\item 
-	\end{itemize}
+	\tcblower
+\begin{tasks}(1)
+  \task Calculer la vitesse moyenne du mobile entre les instants :
+  \begin{multicols}{2}
+  \begin{enumerate}
+    \item \(v_m=\dfrac{p(3)-p(2)}{3-2}=\dfrac{3}{2}\).
+    \item \(v_m=\dfrac{p(t)-p(2)}{t-2}
+      =\dfrac{4t-\dfrac{t^2}{2}-6}{t-2}\).
+    \item \(v_m=\dfrac{p(t)-p(a)}{t-a}
+      =\dfrac{4t-\dfrac{t^2}{2}-(4a-\dfrac{a^2}{2})}{t-a}\).
+    \item \(v_m=\dfrac{p(2+h)-p(2)}{h}=2-\dfrac{h}{2}\).
+    \item \(v_m=\dfrac{p(t+h)-p(t)}{h}=4-t-\dfrac{h}{2}\).
+  \end{enumerate}
+  \end{multicols}
+
+  \task Calculer la vitesse instantanée du mobile :
+Correspond à la limite $h\to 0$ de $4-t-\dfrac{h}{2}$, donc $v(t)=4-t$. 
+  \begin{multicols}{2}
+  \begin{enumerate}
+    \item \(v(2)=2\).
+    \item \(v(t)=4-t\).
+  \end{enumerate}
+  \end{multicols}
 \end{tasks}
+
 }
 
