--- a/src_exos/v911h.tex
+++ b/src_exos/v911h.tex
@@ -20,7 +20,16 @@ On considère la fonction $f(x)=\sqrt{x}$. A l'aide de la définition de la dér
 \tcblower
 \begin{tasks}
 	\task Par définition de la fonction racine, la limite à gauche en $0$ n'est pas calculable, ainsi la dérivée en $0$ n'existe pas. 
-	\task Fait en cours.
+	
+\task $f(x)=\sqrt{x}$, $x>0$. 
+\[
+f'(x)=\displaystyle\lim_{h\to 0}\dfrac{\sqrt{x+h}-\sqrt{x}}{h}
+=\displaystyle\lim_{h\to 0}\dfrac{1}{\sqrt{x+h}+\sqrt{x}}\cdot
+\dfrac{(\sqrt{x+h}-\sqrt{x})(\sqrt{x+h}+\sqrt{x})}{h}
+=\dfrac{1}{2\sqrt{x}}.
+\]
+
+
 \end{tasks}
 }
 
