--- a/src_exos/5fsdv.tex
+++ b/src_exos/5fsdv.tex
@@ -14,7 +14,7 @@ Montrer que si $f$ est dérivable en $x$, alors $\left(f(x)^2\right)'=2f(x)f'(x)
 }
 \correction{
 \tcblower
-Puisque $f$ est dérivable l'est également. 
+Puisque $f$ est dérivable $f^2$ l'est également. 
 
 $
 \begin{aligned}
