--- a/src_exos/areny.tex
+++ b/src_exos/areny.tex
@@ -12,12 +12,12 @@
 \tcblower
 Déterminer les dérivées suivantes et donner la réponse sans exposant négatif ou fractionnaire :
 \begin{tasks}(2)
-\task $(\sin(x^4 - \dfrac{1}{x}))$
-\task $(\cos(5\sqrt{x}))$
-\task $(\tan(\cos(x)))$
-\task $(\sin^3(x))$
-\task $(\sqrt{\cos(x)})$
-\task $(\sin^{-1}(2x))$
+\task $\sin(x^4 - \dfrac{1}{x})$
+\task $\cos(5\sqrt{x})$
+\task $\tan(\cos(x))$
+\task $\sin^3(x)$
+\task $\sqrt{\cos(x)}$
+\task $\sin^{-1}(2x)$
 \end{tasks}
 }
 \correction{
