--- a/src_exos/hgcu8.tex
+++ b/src_exos/hgcu8.tex
@@ -14,6 +14,7 @@ Déterminer l'expression algébrique d'une fonction $f$ telle que $x = -2$ et $x
 Justifier que la fonction donnée remplie bien les conditions demandées.
 }
 \correction{
+	\tcblower
 Par exemple 
 $f(x)=\dfrac{-x^2+1}{(x+2)(x-4)}$
 }
