--- a/src_exos/6ekwp.tex
+++ b/src_exos/6ekwp.tex
@@ -22,7 +22,7 @@
 \begin{tasks}
 	\task Par exemple, $|x-2|$ (pourquoi?)
 	\task Démonstration faite en classe.
-	\task Par exemple, si la représentation graphique contient un point anguleux en $(x;f(x))$.
+	\task Par exemple, si la représentation graphique contient un point anguleux en $(x;f(x))$, la fonction est continue en $x$, mais pas dérivable.
 \end{tasks}
 }
 
