--- a/src_exos/bgaa8.tex
+++ b/src_exos/bgaa8.tex
@@ -31,9 +31,8 @@ Utiliser les formules de dérivation pour  déterminer (donner des réponses san
 }
 \correction{
 \tcblower
-{\scriptsize \textit{Correction générée par IA}}
 
-\begin{tasks}(3)
+\begin{tasks}(2)
 \task $-\dfrac{4}{x^2}$
 
 \task $\dfrac{18}{x^2}$
@@ -50,17 +49,17 @@ Utiliser les formules de dérivation pour  déterminer (donner des réponses san
 
 \task $2x + \dfrac{1}{2x^2}$
 
-\task $\dfrac{2x(x^3+1) - x^2 \cdot 3x^2}{(x^3+1)^2} = \dfrac{2x^4 + 2x - 3x^4}{(x^3+1)^2} = \dfrac{-x^4 + 2x}{(x^3+1)^2}$
+\task* $\dfrac{2x(x^3+1) - x^2 \cdot 3x^2}{(x^3+1)^2} = \dfrac{2x^4 + 2x - 3x^4}{(x^3+1)^2} = \dfrac{-x^4 + 2x}{(x^3+1)^2}$
 
-\task $\dfrac{6u^2 \cdot 2u - (1+2u^3) \cdot 2}{4u^2} = \dfrac{12u^3 - 2 - 4u^3}{4u^2} = \dfrac{8u^3 - 2}{4u^2} = \dfrac{4u^3 - 1}{2u^2}$
+\task* $\dfrac{6u^2 \cdot 2u - (1+2u^3) \cdot 2}{4u^2} = \dfrac{12u^3 - 2 - 4u^3}{4u^2} = \dfrac{8u^3 - 2}{4u^2} = \dfrac{4u^3 - 1}{2u^2}$
 
-\task $(2)(3x-7) + (2x+3)(3) = 6x - 14 + 6x + 9 = 12x - 5$
+\task* $(2)(3x-7) + (2x+3)(3) = 6x - 14 + 6x + 9 = 12x - 5$
 
-\task $2x(1+\sqrt{x}) + x^2 \cdot \dfrac{1}{2\sqrt{x}} = 2x + 2x\sqrt{x} + \dfrac{x^2}{2\sqrt{x}} = 2x + 2x\sqrt{x} + \dfrac{x\sqrt{x}}{2}$
+\task* $2x(1+\sqrt{x}) + x^2 \cdot \dfrac{1}{2\sqrt{x}} = 2x + 2x\sqrt{x} + \dfrac{x^2}{2\sqrt{x}} = 2x + 2x\sqrt{x} + \dfrac{x\sqrt{x}}{2}$
 
-\task $(3x^2-1)(x^2-9) + (x^3-x)(2x) = 3x^4 - 27x^2 - x^2 + 9 + 2x^4 - 2x^2 = 5x^4 - 30x^2 + 9$
+\task* $(3x^2-1)(x^2-9) + (x^3-x)(2x) = 3x^4 - 27x^2 - x^2 + 9 + 2x^4 - 2x^2 = 5x^4 - 30x^2 + 9$
 
-\task $\dfrac{2x \cdot 4x - (x^2+1) \cdot 4}{16x^2} = \dfrac{8x^2 - 4x^2 - 4}{16x^2} = \dfrac{4x^2 - 4}{16x^2} = \dfrac{x^2 - 1}{4x^2}$
+\task* $\dfrac{2x \cdot 4x - (x^2+1) \cdot 4}{16x^2} = \dfrac{8x^2 - 4x^2 - 4}{16x^2} = \dfrac{4x^2 - 4}{16x^2} = \dfrac{x^2 - 1}{4x^2}$
 \end{tasks}
 }
 
