--- a/src_exos/ivj7s.tex
+++ b/src_exos/ivj7s.tex
@@ -70,48 +70,50 @@
 }
 \correction{
 \tcblower
-{\scriptsize \textit{Correction générée par IA}}
-
-\begin{tasks}
-\task Estimation graphique des valeurs de $f(a)$ et $f'(a)$~:
-
-\textbf{Pour $a=-2$~:}
-\begin{itemize}
-\item $f(-2)\approx 0$
-\item $f'(-2)\approx 0{,}5$ (tangente avec pente positive modérée)
-\end{itemize}
-
-\textbf{Pour $a=0$~:}
-\begin{itemize}
-\item $f(0)\approx -0{,}8$
-\item $f'(0)\approx -1{,}2$ (tangente avec pente négative)
-\end{itemize}
-
-\textbf{Pour $a=4$~:}
-\begin{itemize}
-\item $f(4)\approx 1{,}2$
-\item $f'(4)\approx 0$ (tangente horizontale, maximum local)
-\end{itemize}
-
-\textbf{Pour $a=6$~:}
-\begin{itemize}
-\item $f(6)\approx 0{,}8$
-\item $f'(6)\approx -0{,}8$ (tangente avec pente négative)
-\end{itemize}
-
-\textbf{Pour $a=8$~:}
-\begin{itemize}
-\item $f(8)\approx -1$
-\item $f'(8)\approx 0$ (tangente horizontale, minimum local)
-\end{itemize}
-
-\task Solutions estimées graphiquement~:
-
-\begin{enumerate}
-\item $f(x)=0$~: $x\approx -2$, $x\approx 2$, $x\approx 7$
-\item $f'(x)=0$~: $x\approx -1$, $x\approx 4$, $x\approx 8$ (extrema locaux)
-\item $f(x)=1$~: $x\approx 3{,}5$, $x\approx 4{,}5$
-\item $f'(x)=1$~: $x\approx -1{,}5$, $x\approx 1$ (pente de la tangente égale à $1$)
-\end{enumerate}
-\end{tasks}
+Corrigé en classe.
+%{\scriptsize \textit{Correction générée par IA}}
+%
+%\begin{tasks}
+%\task Estimation graphique des valeurs de $f(a)$ et $f'(a)$~:
+%
+%\textbf{Pour $a=-2$~:}
+%\begin{itemize}
+%\item $f(-2)\approx 0$
+%\item $f'(-2)\approx 0{,}5$ (tangente avec pente positive modérée)
+%\end{itemize}
+%
+%\textbf{Pour $a=0$~:}
+%\begin{itemize}
+%\item $f(0)\approx -0{,}8$
+%\item $f'(0)\approx -1{,}2$ (tangente avec pente négative)
+%\end{itemize}
+%
+%\textbf{Pour $a=4$~:}
+%\begin{itemize}
+%\item $f(4)\approx 1{,}2$
+%\item $f'(4)\approx 0$ (tangente horizontale, maximum local)
+%\end{itemize}
+%
+%\textbf{Pour $a=6$~:}
+%\begin{itemize}
+%\item $f(6)\approx 0{,}8$
+%\item $f'(6)\approx -0{,}8$ (tangente avec pente négative)
+%\end{itemize}
+%
+%\textbf{Pour $a=8$~:}
+%\begin{itemize}
+%\item $f(8)\approx -1$
+%\item $f'(8)\approx 0$ (tangente horizontale, minimum local)
+%\end{itemize}
+%
+%\task Solutions estimées graphiquement~:
+%
+%\begin{enumerate}
+%\item $f(x)=0$~: $x\approx -2$, $x\approx 2$, $x\approx 7$
+%\item $f'(x)=0$~: $x\approx -1$, $x\approx 4$, $x\approx 8$ (extrema locaux)
+%\item $f(x)=1$~: $x\approx 3{,}5$, $x\approx 4{,}5$
+%\item $f'(x)=1$~: $x\approx -1{,}5$, $x\approx 1$ (pente de la tangente égale à $1$)
+%\end{enumerate}
+%\end{tasks}
+%\end{comment}
 }
