--- a/src_exos/p5qw8.tex
+++ b/src_exos/p5qw8.tex
@@ -12,7 +12,7 @@
 \tcblower
 Soit la fonction $f(x)=x^2$.
 \begin{tasks}
-\task Déterminer l'équation de la tangente au graphe de $f$ au point $(2,4)$.
+\task Déterminer l'équation de la tangente au graphe de $f$ au point $(2;4)$.
 \task La droite d'équation $y=4x-3$ est-elle tangente au graphe de $f$ au point d'abscisse $2$ ? Justifier.
 \end{tasks}
 }
