--- a/src_exos/r2h6k.tex
+++ b/src_exos/r2h6k.tex
@@ -14,7 +14,7 @@ Soit la fonction $f(x)=\dfrac{1}{x^2}$.
 \begin{tasks}
 \task Déterminer l'équation de la tangente au graphe de $f$ au point d'abscisse $2$.
 \task En quel point la tangente au graphe de $f$ a-t-elle une pente de $\dfrac{1}{4}$ ?
-\task Déterminer les points de tangence des tangentes au graphe de $f$ qui passent par le point $\left(\dfrac{1}{2},2\right)$.
+\task Déterminer les points de tangence des tangentes au graphe de $f$ qui passent par le point $\left(\dfrac{1}{2};2\right)$.
 \end{tasks}
 }
 \correction{
