--- a/src_exos/rqd6n.tex
+++ b/src_exos/rqd6n.tex
@@ -20,24 +20,23 @@
 }
 \correction{
 \tcblower
-{\scriptsize \textit{Correction générée par IA}}
 
 \begin{tasks}
 \task Pour $f(x)=x^2$~:
 
-$a=1$~: $f'(1) = \lim_{h \to 0} \dfrac{(1+h)^2 - 1}{h} = \lim_{h \to 0} (2+h) = 2$. Pente de $2$ en $(1;1)$.
+$a=1$~: $f'(1) = \lim_{h \to 0} \dfrac{(1+h)^2 - 1}{h} = \lim_{h \to 0} (2+h) = 2$. Pente de la tangente vaut $2$ en $(1;1)$.
 
-$a=3$~: $f'(3) = \lim_{h \to 0} \dfrac{(3+h)^2 - 9}{h} = \lim_{h \to 0} (6+h) = 6$. Pente de $6$ en $(3;9)$.
+$a=3$~: $f'(3) = \lim_{h \to 0} \dfrac{(3+h)^2 - 9}{h} = \lim_{h \to 0} (6+h) = 6$. Pente de la tangente vaut $6$ en $(3;9)$.
 
 \task Pour $f(x)=x^3$ avec $a=2$~:
 \[
 f'(2) = \lim_{h \to 0} \dfrac{(2+h)^3 - 8}{h} = \lim_{h \to 0} (12+6h+h^2) = 12
 \]
-Pente de $12$ en $(2;8)$.
+Pente de la tangente vaut $12$ en $(2;8)$.
 
-\task Pour $f(x)=x$~: $f'(a) = 1$ pour tout $a$. Pente constante de $1$.
+\task Pour $f(x)=x$~: $f'(a) = 1$ pour tout $a$. Tangente a une pente constante de $1$.
 
-\task Pour $f(x)=3$~: $f'(a) = 0$ pour tout $a$. Tangente horizontale.
+\task Pour $f(x)=3$~: $f'(a) = 0$ pour tout $a$. Tangente est horizontale.
 \end{tasks}
 }
 
