--- a/src_exos/sgsgp.tex
+++ b/src_exos/sgsgp.tex
@@ -76,25 +76,26 @@
 }
 \correction{
 \tcblower
-{\scriptsize \textit{Correction générée par IA}}
-
-\begin{tasks}(2)
-\task
-Fonction affine par morceaux~:
-\begin{itemize}
-\item $]0,1[$~: $f'(x)=1$
-\item $]1,3[$~: $f'(x)=0$
-\item $]3,5[$~: $f'(x)=-\dfrac{1}{2}$
-\end{itemize}
-Non dérivable en $x=1$ et $x=3$.
-
-\task
-$f(x)=\dfrac{1}{1+x^2}$~: cloche symétrique. $f'(x)=0$ en $x=0$, $f'(x)>0$ si $x<0$, $f'(x)<0$ si $x>0$. Fonction impaire symétrique par rapport à l'origine.
-
-\task
-$f(x)=x^2-1$~: $f'(x)=2x$, droite passant par l'origine.
-
-\task
-$f(x)=\sqrt{1-x^2}$~: demi-cercle. $f'(0)=0$, $f'(x) \to \pm\infty$ en $x=\pm 1$, $f'(x)<0$ si $x>0$, $f'(x)>0$ si $x<0$.
-\end{tasks}
+Corrigé en classe.
+%{\scriptsize \textit{Correction générée par IA}}
+%
+%\begin{tasks}(2)
+%\task
+%Fonction affine par morceaux~:
+%\begin{itemize}
+%\item $]0,1[$~: $f'(x)=1$
+%\item $]1,3[$~: $f'(x)=0$
+%\item $]3,5[$~: $f'(x)=-\dfrac{1}{2}$
+%\end{itemize}
+%Non dérivable en $x=1$ et $x=3$.
+%
+%\task
+%$f(x)=\dfrac{1}{1+x^2}$~: cloche symétrique. $f'(x)=0$ en $x=0$, $f'(x)>0$ si $x<0$, $f'(x)<0$ si $x>0$. Fonction impaire symétrique par rapport à l'origine.
+%
+%\task
+%$f(x)=x^2-1$~: $f'(x)=2x$, droite passant par l'origine.
+%
+%\task
+%$f(x)=\sqrt{1-x^2}$~: demi-cercle. $f'(0)=0$, $f'(x) \to \pm\infty$ en $x=\pm 1$, $f'(x)<0$ si $x>0$, $f'(x)>0$ si $x<0$.
+%\end{tasks}
 }
