--- a/src_exos/t8c3v.tex
+++ b/src_exos/t8c3v.tex
@@ -13,7 +13,7 @@
 Soit la fonction $f(x)=2x^2-3x$.
 \begin{tasks}
 \task En quel point la tangente au graphe de $f$ a-t-elle une pente de $\dfrac{1}{4}$ ?
-\task Déterminer l'équation des tangentes au graphe de $f$ qui passent par le point $(0,-8)$.
+\task Déterminer l'équation des tangentes au graphe de $f$ qui passent par le point $(0;-8)$.
 \end{tasks}
 }
 \correction{
