--- a/src_exos/xk5f9.tex
+++ b/src_exos/xk5f9.tex
@@ -10,9 +10,7 @@
 
 \contenu{
 \tcblower
-Cacluler les coordonées des points d'intersection de la courbe d'équation $x=x^3$ avec sa tangente au point d'abscisse $2$. 
-
-{\itshape Indication~: la tangente coupe plusier fois le graphe de $x^3$.}
+Calculer les coordonées des points d'intersection de la courbe d'équation $y=x^3$ avec sa tangente au point d'abscisse $2$. 
 }
 \correction{
 \tcblower
