--- a/1M/1M-exercicesS1-P1-corr.tex
+++ b/1M/1M-exercicesS1-P1-corr.tex
@@ -164,12 +164,12 @@
 \insertexo{bvvy}{false}{cor}
 \insertexo{rhvj}{false}{cor}
 \insertexo{ehjb}{false}{cor}
-%{\bfseries Résolution de problèmes}
-%\insertexo{q8vx}{false}{cor}
-%\insertexo{prpq}{false}{cor}
-%\insertexo{ae7n}{false}{cor}
-%\insertexo{fata}{false}{cor}
-%\insertexo{abv3}{false}{cor}
-%\insertexo{pvqa}{false}{cor}
+{\bfseries Résolution de problèmes}
+\insertexo{q8vx}{false}{cor}
+\insertexo{prpq}{false}{cor}
+\insertexo{ae7n}{false}{cor}
+\insertexo{fata}{false}{cor}
+\insertexo{abv3}{false}{cor}
+\insertexo{pvqa}{false}{cor}
 
 \end{document}
