--- a/3M/3M-calcDiff.tex
+++ b/3M/3M-calcDiff.tex
@@ -15,7 +15,6 @@
 \definecolor{tangentcolor}{RGB}{220,50,47}
 \definecolor{secantcolor}{RGB}{38,139,210}
 \definecolor{pointcolor}{RGB}{220,50,47}
-
 \begin{document}
 \tocloftpagestyle{fancy}
 % Reduce space between section entries
@@ -383,7 +382,7 @@ Pour répondre à cette question, nous choisissons un petit nombre $h \neq 0$ et
 
 \vspace{0.5cm}
 
-Lorsque $h$ tend vers zéro (une limite!), la droite sécante tend (si la limite existe) vers « la tangente de $f$ au point $(x, f(x))$ ».
+Lorsque $h$ tend vers zéro (une limite!), la droite sécante tend (si la limite existe) vers « la tangente de $f$ au point $(x; f(x))$ ».
 
 Ces droites sécantes ont une pente (aussi appelé taux de variation) donnée par
 \begin{equation}
@@ -400,8 +399,8 @@ Nous commençons l'étude systématique de telles limites, ce que les mathémati
 \begin{center}
 \qrwithlabel{Voyage au pays de maths -- Flâneries infinitésimales}{https://www.arte.tv/fr/videos/097454-003-A/voyages-au-pays-des-maths/}
 \end{center}
-\insertexo{j2esz}{true}{exo}
-\insertexo{uhfwb}{true}{exo}
+\insertexo{j2esz}{false}{exo}
+\insertexo{uhfwb}{false}{exo}
 \insertexo{ivj7s}{false}{exo}
 \insertexo{sgsgp}{false}{exo}
 \subsection{Définitions et exemples}
@@ -480,6 +479,7 @@ est une limite à droite et à gauche. Par conséquent, elle ne peut pas être p
 
 
 \begin{exemple}
+\setexemplemargin[2mm]{%
 \begin{tikzpicture}
     \newcommand*\funktion[1]{sqrt(#1)}% dargestellte Funktion
   \newcommand*\ableitung[1]{1/(2*sqrt(#1))}% Ableitung der Funktion
@@ -517,11 +517,12 @@ width=5.5cm,height=5.5cm,
     only marks,
     ] coordinates {(0, 0)};
   \draw[font=\footnotesize,black] (Q) node[above left] {$f$} ;
-  \draw[font=\footnotesize,black] (P) node[below right=1mm] {$(x;\sqrt{1-x^2})$} ;
+\draw[font=\footnotesize,black] (P) node[below right=1mm] {$(x;\sqrt{x})$} ;
 \draw[font=\footnotesize,black] (R) node[above left] {pente} ;
-\draw[font=\footnotesize,black] (R) node[below left] {$-\dfrac{x}{\sqrt{1-x^2}}$} ;
+\draw[font=\footnotesize,black] (R) node[below left] {$\dfrac{1}{2\sqrt{x}}$} ;
         \end{axis}
     \end{tikzpicture}
+}
 	\tcblower
 	Calcul de la dérivée de $f(x)=\sqrt{x}$ pour $x>0$. 
 	\vspace{10cm}	
@@ -532,6 +533,7 @@ width=5.5cm,height=5.5cm,
 
 
 \begin{exemple}
+\setexemplemargin[2mm]{%
     \begin{tikzpicture}
     \newcommand*\funktion[1]{sqrt(1-#1*#1)}% dargestellte Funktion
   \newcommand*\ableitung[1]{-#1/sqrt(1-#1*#1))}% Ableitung der Funktion
@@ -566,15 +568,16 @@ width=5.5cm,height=4cm,
   \draw[font=\footnotesize,black] (R) node[above right] {pente $-\dfrac{x}{\sqrt{1-x^2}}$} ;
         \end{axis}
     \end{tikzpicture}
+}
 	\tcblower
 	Calcul de la dérivée de $f(x)=\sqrt{1-x^2}$ pour $x\in ]-1;1[$.
 	\vspace{10cm}
 \end{exemple}
-\insertexo{h2mu9}{true}{exo}
-\insertexo{wdzr4}{true}{exo}
-\insertexo{9ghy8}{true}{exo}
-\insertexo{g75hx}{true}{exo}
-\insertexo{v911h}{true}{exo}
+\insertexo{h2mu9}{false}{exo}
+\insertexo{wdzr4}{false}{exo}
+\insertexo{9ghy8}{false}{exo}
+\insertexo{g75hx}{false}{exo}
+\insertexo{v911h}{false}{exo}
 
 
 \subsection{Le nombre dérivé}
@@ -610,9 +613,9 @@ $$f(x) = \begin{cases}
 \end{exemple}
 
 \insertexo{rqd6n}{false}{exo}
-\insertexo{pajju}{true}{exo}
-\insertexo{mmztw}{true}{exo}
-\insertexo{hb4kv}{true}{exo}
+\insertexo{pajju}{false}{exo}
+\insertexo{mmztw}{false}{exo}
+\insertexo{hb4kv}{false}{exo}
 \subsection{Relation avec la continuité}
 \begin{thm}
 		\tcblower
@@ -623,7 +626,7 @@ Si $f$ est dérivable en $x$ alors $f$ est continue en $x$.
 
 	\begin{explanation}[0.75]
 	$\displaystyle{\lim_{h\to0}\left( f(x)+h)-f(x)\right)}=\displaystyle{\lim_{h\to 0}\left(\dfrac{f(x+h)-f(x)}{h}\cdot h\right)}$&\\
-	$=\displaystyle{\lim_{h\to 0}\dfrac{f(x+h)-f(x)}{h}\cdot\lim_{h\to 0}h} $ & limites $\exists$ et finies\\
+	$=\displaystyle{\lim_{h\to 0}\dfrac{f(x+h)-f(x)}{h}\cdot\lim_{h\to 0}h} $ & on peut séparer les limites, car elles existent et sont finies\\
 			$=f'(x)\cdot 0=0$ &car $\displaystyle{\lim_{h\to 0}h=0}$
 \end{explanation}
 donc $f$ est bien continue en $x$.
@@ -636,6 +639,7 @@ donc $f$ est bien continue en $x$.
 
 Une fonction peut être continue en un certain nombre $x$ sans y être dérivable.
 \begin{exemple}[label=ex:valabs]
+\setexemplemargin[2mm]{%
 	\begin{tikzpicture}[scale=0.65]
         \begin{axis}[
     axis lines=middle,
@@ -658,6 +662,7 @@ Une fonction peut être continue en un certain nombre $x$ sans y être dérivabl
             \node[below] at (axis cs:1.2,0) {pas de dérivée en 0};
         \end{axis}
     \end{tikzpicture}
+}
 	\tcblower
 La fonction valeur absolue
 $$f(x) = |x|$$
@@ -674,6 +679,7 @@ L'échec de la fonction valeur absolue à être dérivable en 0 est reflété pa
 \end{exemple}
 
 \begin{exemple}[label=ex:anguleux]
+\setexemplemargin[2mm]{%
 	\begin{tikzpicture}[scale=0.65]
         \begin{axis}[
     axis lines=middle,
@@ -696,6 +702,7 @@ L'échec de la fonction valeur absolue à être dérivable en 0 est reflété pa
             \node[below] at (axis cs:1,-0.2) {pas de dérivée en 1};
         \end{axis}
 	\end{tikzpicture}
+}
 	\tcblower
 On observe un changement de direction soudain similaire dans le graphe de
 $$f(x) = \begin{cases}
@@ -727,9 +734,9 @@ au point $(1; 1)$. Encore une fois, $f$ est partout continue (vérifiez-le!), ma
 
 
 \insertexo{3mumb}{false}{exo}
-\insertexo{sjs2h}{true}{exo}
-\insertexo{atf6t}{true}{exo}
-\insertexo{6ekwp}{true}{exo}
+\insertexo{sjs2h}{false}{exo}
+\insertexo{atf6t}{false}{exo}
+\insertexo{6ekwp}{false}{exo}
 
 \subsection{Règles de dérivation}
 Calculer les dérivées de fonction comme
@@ -1018,17 +1025,17 @@ $	\begin{aligned}
 
 	\end{proof}
 \end{coro}
-\insertexo{5mcny}{true}{exo}
-\insertexo{5fsdv}{true}{exo}
-\insertexo{raguk}{true}{exo}
-\insertexo{uc9rv}{true}{exo}
-\insertexo{auu1q}{true}{exo}
-\insertexo[exo:derQuot]{972y4}{true}{exo}
-\insertexo{bgaa8}{true}{exo}
-\insertexo{4pfpm}{true}{exo}
+\insertexo{5mcny}{false}{exo}
+\insertexo{5fsdv}{false}{exo}
+\insertexo{raguk}{false}{exo}
+\insertexo{uc9rv}{false}{exo}
+\insertexo{auu1q}{false}{exo}
+\insertexo[exo:derQuot]{972y4}{false}{exo}
+\insertexo{bgaa8}{false}{exo}
+\insertexo{4pfpm}{false}{exo}
 \insertexo{b6sz1}{false}{exo}
 \insertexo{hrm6y}{false}{exo}
-\insertexo{4pmjf}{true}{exo}
+\insertexo{4pmjf}{false}{exo}
 
 \subsection{L'équation de la tangente}
 \begin{formule}
@@ -1042,10 +1049,15 @@ ou encore
 \end{formule}
 \begin{exemple}
 	\tcblower
+	Déterminer l'équation de la tangente de $f(x)=3x^2$ au point d'abscisse $-1$. 
+	\vspace{6cm}
+\end{exemple}
+\begin{exemple}
+	\tcblower
 	Déterminer l'équation de la tangente de 
 	\[f(x)=\dfrac{2x+1}{3-x}\]
 	au point $(2;5)$. 
-	\vspace{4cm}
+	\vspace{6cm}
 \end{exemple}
 
 \begin{exemple}
@@ -1055,7 +1067,6 @@ ou encore
 	au point $(3;4)$. 
 	\vspace{6cm}
 \end{exemple}
-\insertexo{ddnv1}{false}{exo}
 \insertexo{pbjwq}{false}{exo}
 \insertexo{t8c3v}{false}{exo}
 \insertexo{r2h6k}{false}{exo}
@@ -1065,6 +1076,7 @@ ou encore
 \insertexo{q4xfv}{false}{exo}
 \insertexo{xk5f9}{false}{exo}
 \insertexo{f9twd}{false}{exo}
+\insertexo{ddnv1}{false}{exo}
 \subsection{Dérivées des fonctions trigonométriques}
 \begin{thm}
 Dérivées des fonctions trigonométriques
@@ -1124,8 +1136,8 @@ $
 De même que qu'on écrit $[\sin(x)]^2 = \sin^2(x)$, on note plus simplement $[\sin(x)]' = \sin'(x)$, $[\cos(x)]' = \cos'(x)$ et $[\tan(x)]' = \tan'(x)$.
 \end{notation}
 \begin{exemple}
-	$[\sin(-20x^3 + x)]'$
-	\tcblower
+\setexemplemargin[4mm]{\hspace*{1cm}$[\sin(-20x^3 + x)]'$}
+\tcblower
 On utilise la formule de dérivation de la composition de fonctions. 
 
 $\sin(-20x^3 + x) = g(f(x))$ avec $f(x) = -20x^3 + x$ et $g(x) = \sin(x)$
@@ -1139,8 +1151,8 @@ $\begin{aligned}
 \end{exemple}
 
 \begin{exemple}
-	$[\cos^5(x)]'$
-	\tcblower
+\setexemplemargin[4mm]{\hspace*{2cm}$[\cos^5(x)]'$}
+\tcblower
 On utilise la formule de dérivation de la composition de fonctions. 
 
 $\cos^5(x) = [\cos(x)]^5 = g(f(x))$ avec $f(x) = \cos(x)$ et $g(x) = x^5$
@@ -1155,8 +1167,8 @@ $\begin{aligned}
 \end{exemple}
 
 \begin{exemple}
-$[\sin^3(x^2 - 1)]'$
-	\tcblower
+\setexemplemargin[4mm]{\hspace*{1cm}$[\sin^3(x^2 - 1)]'$}
+\tcblower
 On utilise la formule de dérivation de la composition de fonctions. 
 
 $\sin^3(x^2 - 1) = [\sin(x^2 - 1)]^3 = g(f(x))$ avec $f(x) = \sin(x^2 - 1)$ et $g(x) = x^3$
@@ -1176,8 +1188,8 @@ $\begin{aligned}
 \end{aligned}$
 \end{exemple}
 \insertexo{pju6j}{false}{exo}
-\insertexo{u68mh}{true}{exo}
-\insertexo{areny}{true}{exo}
+\insertexo{areny}{false}{exo}
+\insertexo{u68mh}{false}{exo}
 
 \begin{comment}
 \subsection{Angle entre deux courbes}
@@ -1196,10 +1208,10 @@ $\begin{aligned}
 	\[|\arctan(4)-\arctan(2)\,|\simeq 139,4^\circ\]
 \end{exemple}
 
-\insertexo{5bbkd}{true}{exo}
-\insertexo{kfy9s}{true}{exo}
-\insertexo{mxwa2}{true}{exo}
-\insertexo{91jqx}{true}{exo}
+\insertexo{5bbkd}{false}{exo}
+\insertexo{kfy9s}{false}{exo}
+\insertexo{mxwa2}{false}{exo}
+\insertexo{91jqx}{false}{exo}
 \end{comment}
 
  \nocite{*}
