--- a/src_exos/4pmjf.tex
+++ b/src_exos/4pmjf.tex
@@ -26,14 +26,15 @@ Dériver les fonctions.
 }
 \correction{
 \tcblower
-{\scriptsize \textit{Correction générée par IA}}
+(Sans le développement complet)
 
 \begin{tasks}(2)
 \task $f'(x) = 20(1-x)^{19} \cdot (-1) = -20(1-x)^{19}$
 
 \task $f'(x) = 4(x^2+1)^3 \cdot 2x = 8x(x^2+1)^3$
 
-\task
+\task*
+
 \( \begin{aligned}
 f'(x) &= 3(x^2+1)^2 \cdot 2x \cdot (2-x^3)^2 + (x^2+1)^3 \cdot 2(2-x^3) \cdot (-3x^2) \\
 &= 6x(x^2+1)^2(2-x^3)^2 - 6x^2(x^2+1)^3(2-x^3)
@@ -42,16 +43,18 @@ f'(x) &= 3(x^2+1)^2 \cdot 2x \cdot (2-x^3)^2 + (x^2+1)^3 \cdot 2(2-x^3) \cdot (-
 \task $f'(x) = 6\left(7x^2-\dfrac{4}{x}+6\right)^5 \cdot \left(14x+\dfrac{4}{x^2}\right)$
 
 \task
+
 \( \begin{aligned}
 f'(x) &= \dfrac{\dfrac{1}{2\sqrt{x}}(1+\sqrt{2x}) - (1+\sqrt{x}) \cdot \dfrac{1}{\sqrt{2x}}}{(1+\sqrt{2x})^2} \\
 &= \dfrac{\dfrac{1+\sqrt{2x}}{2\sqrt{x}} - \dfrac{1+\sqrt{x}}{\sqrt{2x}}}{(1+\sqrt{2x})^2}
 \end{aligned} \)
 
-\task $f'(x) = -\dfrac{2 \cdot 2(x^2-x+1) \cdot (2x-1)}{(x^2-x+1)^4} = -\dfrac{4(2x-1)}{(x^2-x+1)^3}$
+\task* $f'(x) = -\dfrac{2 \cdot 2(x^2-x+1) \cdot (2x-1)}{(x^2-x+1)^4} = -\dfrac{4(2x-1)}{(x^2-x+1)^3}$
 
 \task $f'(x) = -\dfrac{1}{2}(a^2-x^2)^{-\frac{3}{2}} \cdot (-2x) = \dfrac{x}{(a^2-x^2)\sqrt{a^2-x^2}}$
 
 \task
+
 \( \begin{aligned}
 f'(x) &= 2\left(\dfrac{1+x}{1-x}\right) \cdot \dfrac{1 \cdot (1-x) - (1+x) \cdot (-1)}{(1-x)^2} \\
 &= 2\left(\dfrac{1+x}{1-x}\right) \cdot \dfrac{1-x+1+x}{(1-x)^2} \\
@@ -60,6 +63,7 @@ f'(x) &= 2\left(\dfrac{1+x}{1-x}\right) \cdot \dfrac{1 \cdot (1-x) - (1+x) \cdot
 \end{aligned} \)
 
 \task
+
 \( \begin{aligned}
 f'(x) &= \dfrac{2x\sqrt{x^2+a^2} - x^2 \cdot \dfrac{2x}{2\sqrt{x^2+a^2}}}{x^2+a^2} \\
 &= \dfrac{2x\sqrt{x^2+a^2} - \dfrac{x^3}{\sqrt{x^2+a^2}}}{x^2+a^2} \\
